# Soft-Eng-II

./: .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml
currency-history/: Dockerfile  pyproject.toml
currency-history/src/: app.py
currency-history/tests/: test_app.py
currency-report/: Dockerfile  pyproject.toml
currency-report/src/: app.py
currency-report/tests/: test_app.py
